--- a/多线程编程技术.md
+++ b/多线程编程技术.md
@@ -3,21 +3,27 @@
 > '非线程安全'是多个线程对同一个对象实例变量进行并发访问时发生。
 
 * [2.1synchronized同步方法](#2.1)
- * [2.2.1 方法内变量为线程安全](#2.2.1)
- * [2.2.2 实例变量非线程安全](#2.2.2)
- * [2.2.3 多个对象多个锁](#2.2.3)
- * [2.2.4 synchronized方法和锁对象](#2.2.4)
- * [2.2.5 synchronized锁重入](#2.2.5)
- * [2.2.6 出现异常自动释放锁](#2.2.6)
- * [2.2.7 锁同步不具有继承性](#2.2.7)
-* [2.2synchronized同步代码块](#2.1)
+ * [2.1.1 方法内变量为线程安全](#2.1.1)
+ * [2.1.2 实例变量非线程安全](#2.1.2)
+ * [2.1.3 多个对象多个锁](#2.1.3)
+ * [2.1.4 synchronized方法和锁对象](#2.1.4)
+ * [2.1.5 synchronized锁重入](#2.1.5)
+ * [2.1.6 出现异常自动释放锁](#2.1.6)
+ * [2.1.7 锁同步不具有继承性](#2.1.7)
+* [2.2synchronized同步代码块](#2.2)
+ 
 
 
-## 2.2.1方法内变量为线程安全
+## 2.1.1方法内变量为线程安全
 方法中变量不存在线程不安全问题。
 
-##2.2.2 实例变量非线程安全
+##2.1.2 实例变量非线程安全
 量个变量同时访问一个没有同步的方法，若两个对象同时操作业务对象中的实例变量，则有可能出现非线程安全问题。
+
+##2.2 synchronized同步代码块
+* synchronized同步方法的主要弊端是效率比较低，synchronized同步代码块可以提高运行效率。
+* 不在synchronized同步代码块是异步执行，在synchronized同步代码块中是同步执行。
+* 
 
 
 
