--- a/多线程编程技术.md
+++ b/多线程编程技术.md
@@ -15,6 +15,7 @@
  * [2.3.1 volatile关键字作用](#2.3.1)
  * [2.3.2 volatile不支持原子性](#2.3.2)
  * [2.3.3 变量在内存中的工作过程](#2.3.3)
+ * [2.3.4 使用原子类](#2.3.4)
  
 
 
@@ -114,9 +115,77 @@
 volatile关键字增加了实例变量在多个线程之间的可见性，但是volatile关键字不支持变量的原子性。
 
 ###2.3.3 变量在内存中的工作过程
+* read and load阶段：从主存复制变量到当前工作内存空间;
+* use and assign阶段：执行代码，改变共享变量值；
+* store and write阶段：工作空间内存刷新到主存对应的变量值；
+
+###2.3.4 使用原子类
+由于变量的工作过程是非线性安全的，因此可以使用原子类变量AtomincInteger实现变量的原子性。原子操作是不可分割的整体，没有其他线程能够中断或检查正在原子操作的变量。
+
+非原子性
+
+    package printString;
+
+    public class TestAtomic extends Thread{
+	
+    public static int count;
+	
+	@Override
+	public void run() {
+		// TODO Auto-generated method stub
+		for(int i=0;i<10000;i++){
+			count++;
+		}
+		System.out.println("当前count值"+getCount());
+	}
+
+	public int getCount() {
+		return count;
+	}
+
+	public void setCount(int count) {
+		this.count = count;
+	}
+    }
+
+----------
+原子性
+
+    package printString;
+
+    import java.util.concurrent.atomic.AtomicInteger;
+
+    public class TestAtomic extends Thread{
+	
+    public static AtomicInteger count=new AtomicInteger(0);
+	
+	@Override
+	public void run() {
+		// TODO Auto-generated method stub
+		synchronized (TestAtomic.class) {
+			for(int i=0;i<10;i++){
+				count.incrementAndGet();
+				
+			}
+			System.out.println("当前count值"+count.get());
+		}
+	}
+    }
+
+# 三、线程间通信 #
+* [3.1等待通知机制](#3.1)
 
 
+###3.1 等待通知机制
+方法wait()的作用是使当前正在执行线程进行等待，wait()是object类方法，该方法将当前正在执行的线程置入"预执行队列"中，并且在wait()所在的代码出停止执行，直到被通知或者中断；
+方法notify()的作用是用来通知那些等待该对象的对象锁，如果有多个线程，随机挑选一个成为wait()状态的线程。
 
+
+1.  在调用wait()前，线程必须获取对象的对象级别锁，因此wait()方法只能在同步代码块或者同步方法中调用；
+2.   在调用notify()前，线程必须获取对象的对象级别锁，因此notify()方法只能在同步代码块或者同步方法中调用；
+3.   执行notify()方法后，当前线程不会立即释放该对象锁；
+4.   执行wait()方法后，当前线程会立即释放该对象锁；
+5.   wait()使线程停止运行，notify()使停止的线程继续运行；
 
 
 
